--- a/styles/error.css
+++ b/styles/error.css
@@ -44,7 +44,7 @@ nav.nav_container {
   background-color: #FCFFFF;
   padding: 1rem 8rem;
   z-index: 9999;
-  border: 1px solid rgba(12, 23, 28, 0.2509803922);
+  border-bottom: 1px solid rgba(12, 23, 28, 0.2509803922);
 }
 nav.nav_container .hamberger {
   display: flex;
