--- a/styles/global/_navigation.scss
+++ b/styles/global/_navigation.scss
@@ -17,7 +17,7 @@ nav.nav_container {
     background-color: $color_white;
     padding: 1rem 8rem;
     z-index: 9999;
-    border: 1px solid $dark25;
+    border-bottom: 1px solid $dark25;
 
     .hamberger {
         display: flex;
